Update June 2021 metrics

--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -98,12 +98,12 @@
     {
      "data": {
       "text/plain": [
-       "{'mediawiki_history_snapshot': '2021-05',\n",
-       " 'metrics_month': '2021-05',\n",
-       " 'metrics_month_first_day': '2021-05-01',\n",
-       " 'metrics_month_last_day': '2021-05-31',\n",
+       "{'mediawiki_history_snapshot': '2021-06',\n",
+       " 'metrics_month': '2021-06',\n",
+       " 'metrics_month_first_day': '2021-06-01',\n",
+       " 'metrics_month_last_day': '2021-06-30',\n",
        " 'metrics_year': 2021,\n",
-       " 'metrics_cur_month': 5}"
+       " 'metrics_cur_month': 6}"
       ]
      },
      "execution_count": 4,
@@ -124,14 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running structured_data_used on hive...\n"
+      "Running structured_data_used on hive...\n",
+      "Running num_commons_files_used_content_pages on hive...\n",
+      "Running wikidata_items on hive...\n",
+      "Running wikidata_items_being_reused on hive...\n"
      ]
     }
    ],
@@ -176,9 +179,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>wikidata_items_being_reused</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>19379045</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       month  wikidata_items_being_reused\n",
+       "0 2021-06-01                     19379045"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
@@ -192,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +256,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>structured_data_used</th>\n",
+       "      <th>num_commons_files_used_content_pages</th>\n",
+       "      <th>wikidata_items</th>\n",
+       "      <th>wikidata_items_being_reused</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-09-01</th>\n",
+       "      <td>105631168.0</td>\n",
+       "      <td>33815277.0</td>\n",
+       "      <td>89386201.0</td>\n",
+       "      <td>18472082.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>106729592.0</td>\n",
+       "      <td>32666244.0</td>\n",
+       "      <td>90190671.0</td>\n",
+       "      <td>18549227.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-01</th>\n",
+       "      <td>108116779.0</td>\n",
+       "      <td>31481821.0</td>\n",
+       "      <td>90821857.0</td>\n",
+       "      <td>18673974.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-01</th>\n",
+       "      <td>109284793.0</td>\n",
+       "      <td>30628535.0</td>\n",
+       "      <td>91480812.0</td>\n",
+       "      <td>18782123.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>110336427.0</td>\n",
+       "      <td>30922629.0</td>\n",
+       "      <td>91898784.0</td>\n",
+       "      <td>18890176.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>111537756.0</td>\n",
+       "      <td>31236223.0</td>\n",
+       "      <td>92346206.0</td>\n",
+       "      <td>18961132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>113749241.0</td>\n",
+       "      <td>31994067.0</td>\n",
+       "      <td>92766054.0</td>\n",
+       "      <td>19081836.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>115768032.0</td>\n",
+       "      <td>32439596.0</td>\n",
+       "      <td>93039049.0</td>\n",
+       "      <td>19175909.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-01</th>\n",
+       "      <td>117023506.0</td>\n",
+       "      <td>33188319.0</td>\n",
+       "      <td>93295754.0</td>\n",
+       "      <td>19272296.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-01</th>\n",
+       "      <td>117956153.0</td>\n",
+       "      <td>33484828.0</td>\n",
+       "      <td>93525712.0</td>\n",
+       "      <td>19379045.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            structured_data_used  num_commons_files_used_content_pages  \\\n",
+       "month                                                                    \n",
+       "2020-09-01  105631168.0           33815277.0                             \n",
+       "2020-10-01  106729592.0           32666244.0                             \n",
+       "2020-11-01  108116779.0           31481821.0                             \n",
+       "2020-12-01  109284793.0           30628535.0                             \n",
+       "2021-01-01  110336427.0           30922629.0                             \n",
+       "2021-02-01  111537756.0           31236223.0                             \n",
+       "2021-03-01  113749241.0           31994067.0                             \n",
+       "2021-04-01  115768032.0           32439596.0                             \n",
+       "2021-05-01  117023506.0           33188319.0                             \n",
+       "2021-06-01  117956153.0           33484828.0                             \n",
+       "\n",
+       "            wikidata_items  wikidata_items_being_reused  \n",
+       "month                                                    \n",
+       "2020-09-01  89386201.0      18472082.0                   \n",
+       "2020-10-01  90190671.0      18549227.0                   \n",
+       "2020-11-01  90821857.0      18673974.0                   \n",
+       "2020-12-01  91480812.0      18782123.0                   \n",
+       "2021-01-01  91898784.0      18890176.0                   \n",
+       "2021-02-01  92346206.0      18961132.0                   \n",
+       "2021-03-01  92766054.0      19081836.0                   \n",
+       "2021-04-01  93039049.0      19175909.0                   \n",
+       "2021-05-01  93295754.0      19272296.0                   \n",
+       "2021-06-01  93525712.0      19379045.0                   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if old_metrics is None:\n",
     "    metrics = new_metrics\n",
@@ -222,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
