Update Aug 2021 metrics

--- a/02-report.ipynb
+++ b/02-report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "from wmfdata.charting import pct_fmt, M_fmt, comma_fmt\n",
     "\n",
     "import gspread\n",
-    "from google.oauth2.service_account import Credentials\n"
+    "from google.oauth2.service_account import Credentials"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,13 @@
        "      <td>93808863.0</td>\n",
        "      <td>19464104.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-01</th>\n",
+       "      <td>120411293.0</td>\n",
+       "      <td>35339547.0</td>\n",
+       "      <td>94347261.0</td>\n",
+       "      <td>19540328.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -184,6 +191,7 @@
        "2021-05-01           117023506.0                            33188319.0   \n",
        "2021-06-01           117956153.0                            33484828.0   \n",
        "2021-07-01           118873343.0                            33853754.0   \n",
+       "2021-08-01           120411293.0                            35339547.0   \n",
        "\n",
        "            wikidata_items  wikidata_items_being_reused  \n",
        "month                                                    \n",
@@ -199,10 +207,11 @@
        "2021-04-01      93039049.0                   19175909.0  \n",
        "2021-05-01      93295754.0                   19272296.0  \n",
        "2021-06-01      93525712.0                   19379045.0  \n",
-       "2021-07-01      93808863.0                   19464104.0  "
+       "2021-07-01      93808863.0                   19464104.0  \n",
+       "2021-08-01      94347261.0                   19540328.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -278,44 +287,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>month</th>\n",
-       "      <th>2021-07-01 00:00:00</th>\n",
+       "      <th>2021-08-01 00:00:00</th>\n",
        "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>structured_data_used</th>\n",
-       "      <td>118873343.0</td>\n",
-       "      <td>0.366360</td>\n",
+       "      <td>120411293.0</td>\n",
+       "      <td>0.384038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_commons_files_used_content_pages</th>\n",
-       "      <td>33853754.0</td>\n",
-       "      <td>0.085056</td>\n",
+       "      <td>35339547.0</td>\n",
+       "      <td>0.132678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items</th>\n",
-       "      <td>93808863.0</td>\n",
+       "      <td>94347261.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items_being_reused</th>\n",
-       "      <td>19464104.0</td>\n",
-       "      <td>0.207487</td>\n",
+       "      <td>19540328.0</td>\n",
+       "      <td>0.207111</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "month                                 2021-07-01 00:00:00    status\n",
-       "structured_data_used                          118873343.0  0.366360\n",
-       "num_commons_files_used_content_pages           33853754.0  0.085056\n",
-       "wikidata_items                                 93808863.0       NaN\n",
-       "wikidata_items_being_reused                    19464104.0  0.207487"
+       "month                                 2021-08-01 00:00:00    status\n",
+       "structured_data_used                          120411293.0  0.384038\n",
+       "num_commons_files_used_content_pages           35339547.0  0.132678\n",
+       "wikidata_items                                 94347261.0       NaN\n",
+       "wikidata_items_being_reused                    19540328.0  0.207111"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,22 +386,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       " 'tableRange': 'Sheet1!A1:E13',\n",
+       " 'tableRange': 'Sheet1!A1:E14',\n",
        " 'updates': {'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       "  'updatedRange': 'Sheet1!A14:E14',\n",
+       "  'updatedRange': 'Sheet1!A15:E15',\n",
        "  'updatedRows': 1,\n",
        "  'updatedColumns': 5,\n",
        "  'updatedCells': 5}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
