Update November 2021 metrics

--- a/02-report.ipynb
+++ b/02-report.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using wmfdata v1.2, but v1.3.1 is available.\n",
+      "\n",
+      "To update, run `pip install --upgrade git+https://github.com/wikimedia/wmfdata-python.git@release`.\n",
+      "\n",
+      "To see the changes, refer to https://github.com/wikimedia/wmfdata-python/blob/release/CHANGELOG.md\n"
+     ]
+    }
+   ],
    "source": [
     "from functools import reduce\n",
     "\n",
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +197,13 @@
        "      <td>95086219.0</td>\n",
        "      <td>19801319.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-01</th>\n",
+       "      <td>123918750.0</td>\n",
+       "      <td>36208503.0</td>\n",
+       "      <td>95420570.0</td>\n",
+       "      <td>20031718.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -208,6 +227,7 @@
        "2021-08-01           120411293.0                            35339547.0   \n",
        "2021-09-01           121413643.0                            35748687.0   \n",
        "2021-10-01           123036144.0                            36017280.0   \n",
+       "2021-11-01           123918750.0                            36208503.0   \n",
        "\n",
        "            wikidata_items  wikidata_items_being_reused  \n",
        "month                                                    \n",
@@ -226,10 +246,11 @@
        "2021-07-01      93808863.0                   19464104.0  \n",
        "2021-08-01      94347261.0                   19540328.0  \n",
        "2021-09-01      94646283.0                   19640044.0  \n",
-       "2021-10-01      95086219.0                   19801319.0  "
+       "2021-10-01      95086219.0                   19801319.0  \n",
+       "2021-11-01      95420570.0                   20031718.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,44 +326,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>month</th>\n",
-       "      <th>2021-10-01 00:00:00</th>\n",
+       "      <th>2021-11-01 00:00:00</th>\n",
        "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>structured_data_used</th>\n",
-       "      <td>123036144.0</td>\n",
-       "      <td>0.414209</td>\n",
+       "      <td>123918750.0</td>\n",
+       "      <td>0.424353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_commons_files_used_content_pages</th>\n",
-       "      <td>36017280.0</td>\n",
-       "      <td>0.154400</td>\n",
+       "      <td>36208503.0</td>\n",
+       "      <td>0.160529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items</th>\n",
-       "      <td>95086219.0</td>\n",
+       "      <td>95420570.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items_being_reused</th>\n",
-       "      <td>19801319.0</td>\n",
-       "      <td>0.208246</td>\n",
+       "      <td>20031718.0</td>\n",
+       "      <td>0.209931</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "month                                 2021-10-01 00:00:00    status\n",
-       "structured_data_used                          123036144.0  0.414209\n",
-       "num_commons_files_used_content_pages           36017280.0  0.154400\n",
-       "wikidata_items                                 95086219.0       NaN\n",
-       "wikidata_items_being_reused                    19801319.0  0.208246"
+       "month                                 2021-11-01 00:00:00    status\n",
+       "structured_data_used                          123918750.0  0.424353\n",
+       "num_commons_files_used_content_pages           36208503.0  0.160529\n",
+       "wikidata_items                                 95420570.0       NaN\n",
+       "wikidata_items_being_reused                    20031718.0  0.209931"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,22 +425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       " 'tableRange': 'Sheet1!A1:E16',\n",
+       " 'tableRange': 'Sheet1!A1:E17',\n",
        " 'updates': {'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       "  'updatedRange': 'Sheet1!A17:E17',\n",
+       "  'updatedRange': 'Sheet1!A18:E18',\n",
        "  'updatedRows': 1,\n",
        "  'updatedColumns': 5,\n",
        "  'updatedCells': 5}}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
