--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        " 'metrics_cur_month': 12}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,9 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running structured_data_used on hive...\n",
+      "Running num_commons_files_used_content_pages on hive...\n",
+      "Running wikidata_items on hive...\n",
+      "Running wikidata_items_being_reused on hive...\n"
+     ]
+    }
+   ],
    "source": [
     "queries = {\n",
     "    \"structured_data_used\": {\n",
@@ -180,9 +191,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>wikidata_items_being_reused</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>20161422</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       month  wikidata_items_being_reused\n",
+       "0 2021-12-01                     20161422"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
@@ -196,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,9 +268,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>structured_data_used</th>\n",
+       "      <th>num_commons_files_used_content_pages</th>\n",
+       "      <th>wikidata_items</th>\n",
+       "      <th>wikidata_items_being_reused</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>113749241.0</td>\n",
+       "      <td>31994067.0</td>\n",
+       "      <td>92766054.0</td>\n",
+       "      <td>19081836.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>115768032.0</td>\n",
+       "      <td>32439596.0</td>\n",
+       "      <td>93039049.0</td>\n",
+       "      <td>19175909.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-01</th>\n",
+       "      <td>117023506.0</td>\n",
+       "      <td>33188319.0</td>\n",
+       "      <td>93295754.0</td>\n",
+       "      <td>19272296.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-01</th>\n",
+       "      <td>117956153.0</td>\n",
+       "      <td>33484828.0</td>\n",
+       "      <td>93525712.0</td>\n",
+       "      <td>19379045.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>118873343.0</td>\n",
+       "      <td>33853754.0</td>\n",
+       "      <td>93808863.0</td>\n",
+       "      <td>19464104.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-01</th>\n",
+       "      <td>120411293.0</td>\n",
+       "      <td>35339547.0</td>\n",
+       "      <td>94347261.0</td>\n",
+       "      <td>19540328.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>121413643.0</td>\n",
+       "      <td>35748687.0</td>\n",
+       "      <td>94646283.0</td>\n",
+       "      <td>19640044.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-01</th>\n",
+       "      <td>123036144.0</td>\n",
+       "      <td>36017280.0</td>\n",
+       "      <td>95086219.0</td>\n",
+       "      <td>19801319.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-01</th>\n",
+       "      <td>123918750.0</td>\n",
+       "      <td>36208503.0</td>\n",
+       "      <td>95420570.0</td>\n",
+       "      <td>20031718.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01</th>\n",
+       "      <td>124842611.0</td>\n",
+       "      <td>36843454.0</td>\n",
+       "      <td>95826220.0</td>\n",
+       "      <td>20161422.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            structured_data_used  num_commons_files_used_content_pages  \\\n",
+       "month                                                                    \n",
+       "2021-03-01  113749241.0           31994067.0                             \n",
+       "2021-04-01  115768032.0           32439596.0                             \n",
+       "2021-05-01  117023506.0           33188319.0                             \n",
+       "2021-06-01  117956153.0           33484828.0                             \n",
+       "2021-07-01  118873343.0           33853754.0                             \n",
+       "2021-08-01  120411293.0           35339547.0                             \n",
+       "2021-09-01  121413643.0           35748687.0                             \n",
+       "2021-10-01  123036144.0           36017280.0                             \n",
+       "2021-11-01  123918750.0           36208503.0                             \n",
+       "2021-12-01  124842611.0           36843454.0                             \n",
+       "\n",
+       "            wikidata_items  wikidata_items_being_reused  \n",
+       "month                                                    \n",
+       "2021-03-01  92766054.0      19081836.0                   \n",
+       "2021-04-01  93039049.0      19175909.0                   \n",
+       "2021-05-01  93295754.0      19272296.0                   \n",
+       "2021-06-01  93525712.0      19379045.0                   \n",
+       "2021-07-01  93808863.0      19464104.0                   \n",
+       "2021-08-01  94347261.0      19540328.0                   \n",
+       "2021-09-01  94646283.0      19640044.0                   \n",
+       "2021-10-01  95086219.0      19801319.0                   \n",
+       "2021-11-01  95420570.0      20031718.0                   \n",
+       "2021-12-01  95826220.0      20161422.0                   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if old_metrics is None:\n",
     "    metrics = new_metrics\n",
@@ -226,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
