Update January 2022 metrics

--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -16,9 +16,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You are using wmfdata v1.2, but v1.3.1 is available.\n",
+      "You are using wmfdata v1.3.1, but v1.3.2 is available.\n",
       "\n",
-      "To update, run `pip install --upgrade git+https://github.com/wikimedia/wmfdata-python.git@release`.\n",
+      "To update, run `pip install --upgrade git+https://github.com/wikimedia/wmfdata-python.git@release --ignore-installed`.\n",
       "\n",
       "To see the changes, refer to https://github.com/wikimedia/wmfdata-python/blob/release/CHANGELOG.md\n"
      ]
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,21 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mediawiki_history_snapshot': '2021-12',\n",
-       " 'metrics_month': '2021-12',\n",
-       " 'metrics_month_first_day': '2021-12-01',\n",
-       " 'metrics_month_last_day': '2021-12-31',\n",
-       " 'metrics_year': 2021,\n",
-       " 'metrics_cur_month': 12}"
+       "{'mediawiki_history_snapshot': '2022-01',\n",
+       " 'metrics_month': '2022-01',\n",
+       " 'metrics_month_first_day': '2022-01-01',\n",
+       " 'metrics_month_last_day': '2022-01-31',\n",
+       " 'metrics_year': 2022,\n",
+       " 'metrics_cur_month': 1}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,8 +222,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-12-01</td>\n",
-       "      <td>20161422</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>20266273</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,10 +231,10 @@
       ],
       "text/plain": [
        "       month  wikidata_items_being_reused\n",
-       "0 2021-12-01                     20161422"
+       "0 2022-01-01                     20266273"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,13 +306,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-03-01</th>\n",
-       "      <td>113749241.0</td>\n",
-       "      <td>31994067.0</td>\n",
-       "      <td>92766054.0</td>\n",
-       "      <td>19081836.0</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-04-01</th>\n",
        "      <td>115768032.0</td>\n",
@@ -376,6 +369,13 @@
        "      <td>95826220.0</td>\n",
        "      <td>20161422.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>125887906.0</td>\n",
+       "      <td>37096017.0</td>\n",
+       "      <td>96153653.0</td>\n",
+       "      <td>20266273.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -383,7 +383,6 @@
       "text/plain": [
        "            structured_data_used  num_commons_files_used_content_pages  \\\n",
        "month                                                                    \n",
-       "2021-03-01  113749241.0           31994067.0                             \n",
        "2021-04-01  115768032.0           32439596.0                             \n",
        "2021-05-01  117023506.0           33188319.0                             \n",
        "2021-06-01  117956153.0           33484828.0                             \n",
@@ -393,10 +392,10 @@
        "2021-10-01  123036144.0           36017280.0                             \n",
        "2021-11-01  123918750.0           36208503.0                             \n",
        "2021-12-01  124842611.0           36843454.0                             \n",
+       "2022-01-01  125887906.0           37096017.0                             \n",
        "\n",
        "            wikidata_items  wikidata_items_being_reused  \n",
        "month                                                    \n",
-       "2021-03-01  92766054.0      19081836.0                   \n",
        "2021-04-01  93039049.0      19175909.0                   \n",
        "2021-05-01  93295754.0      19272296.0                   \n",
        "2021-06-01  93525712.0      19379045.0                   \n",
@@ -405,7 +404,8 @@
        "2021-09-01  94646283.0      19640044.0                   \n",
        "2021-10-01  95086219.0      19801319.0                   \n",
        "2021-11-01  95420570.0      20031718.0                   \n",
-       "2021-12-01  95826220.0      20161422.0                   "
+       "2021-12-01  95826220.0      20161422.0                   \n",
+       "2022-01-01  96153653.0      20266273.0                   "
       ]
      },
      "metadata": {},
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
