--- a/02-report.ipynb
+++ b/02-report.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using wmfdata v1.3.1, but v1.3.2 is available.\n",
+      "\n",
+      "To update, run `pip install --upgrade git+https://github.com/wikimedia/wmfdata-python.git@release --ignore-installed`.\n",
+      "\n",
+      "To see the changes, refer to https://github.com/wikimedia/wmfdata-python/blob/release/CHANGELOG.md\n"
+     ]
+    }
+   ],
    "source": [
     "from functools import reduce\n",
     "\n",
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +211,13 @@
        "      <td>95826220.0</td>\n",
        "      <td>20161422.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>125887906.0</td>\n",
+       "      <td>37096017.0</td>\n",
+       "      <td>96153653.0</td>\n",
+       "      <td>20266273.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -224,6 +243,7 @@
        "2021-10-01           123036144.0                            36017280.0   \n",
        "2021-11-01           123918750.0                            36208503.0   \n",
        "2021-12-01           124842611.0                            36843454.0   \n",
+       "2022-01-01           125887906.0                            37096017.0   \n",
        "\n",
        "            wikidata_items  wikidata_items_being_reused  \n",
        "month                                                    \n",
@@ -244,10 +264,11 @@
        "2021-09-01      94646283.0                   19640044.0  \n",
        "2021-10-01      95086219.0                   19801319.0  \n",
        "2021-11-01      95420570.0                   20031718.0  \n",
-       "2021-12-01      95826220.0                   20161422.0  "
+       "2021-12-01      95826220.0                   20161422.0  \n",
+       "2022-01-01      96153653.0                   20266273.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,44 +344,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>month</th>\n",
-       "      <th>2021-12-01 00:00:00</th>\n",
+       "      <th>2022-01-01 00:00:00</th>\n",
        "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>structured_data_used</th>\n",
-       "      <td>124842611.0</td>\n",
-       "      <td>0.434973</td>\n",
+       "      <td>125887906.0</td>\n",
+       "      <td>0.446987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_commons_files_used_content_pages</th>\n",
-       "      <td>36843454.0</td>\n",
-       "      <td>0.180880</td>\n",
+       "      <td>37096017.0</td>\n",
+       "      <td>0.188975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items</th>\n",
-       "      <td>95826220.0</td>\n",
+       "      <td>96153653.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items_being_reused</th>\n",
-       "      <td>20161422.0</td>\n",
-       "      <td>0.210396</td>\n",
+       "      <td>20266273.0</td>\n",
+       "      <td>0.210770</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "month                                 2021-12-01 00:00:00    status\n",
-       "structured_data_used                          124842611.0  0.434973\n",
-       "num_commons_files_used_content_pages           36843454.0  0.180880\n",
-       "wikidata_items                                 95826220.0       NaN\n",
-       "wikidata_items_being_reused                    20161422.0  0.210396"
+       "month                                 2022-01-01 00:00:00    status\n",
+       "structured_data_used                          125887906.0  0.446987\n",
+       "num_commons_files_used_content_pages           37096017.0  0.188975\n",
+       "wikidata_items                                 96153653.0       NaN\n",
+       "wikidata_items_being_reused                    20266273.0  0.210770"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,22 +443,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       " 'tableRange': 'Sheet1!A1:E18',\n",
+       " 'tableRange': 'Sheet1!A1:E20',\n",
        " 'updates': {'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       "  'updatedRange': 'Sheet1!A19:E19',\n",
+       "  'updatedRange': 'Sheet1!A21:E21',\n",
        "  'updatedRows': 1,\n",
        "  'updatedColumns': 5,\n",
        "  'updatedCells': 5}}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
